Continue homepage markup

--- a/jekyll/app/_layouts/homepage.html
+++ b/jekyll/app/_layouts/homepage.html
@@ -50,7 +50,7 @@
             <span class="icon-text">PEOPLE</span>
           </a>
         </li>
-        <li class="places-icon">
+        <li class="places-icon last">
           <a href="#">
             <span class="icon places"></span>
             <span class="icon-text">PLACES</span>
