--- a/jekyll/app/_layouts/homepage.html
+++ b/jekyll/app/_layouts/homepage.html
@@ -24,7 +24,7 @@
         <li class="search"><span></span></li>
       </ul>
     </nav>
-    <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+    <h1 class="title"><a href="/">HASKALA</a></h1>
   </header>
 
   {{ content }}
