--- a/jekyll/app/_layouts/homepage.html
+++ b/jekyll/app/_layouts/homepage.html
@@ -16,7 +16,7 @@
 
 <div class="site">
   <header>
-    <nav class="top_navigation nav-bar">
+    <nav class="top-navigation nav-bar">
       <ul>
         <li><a href="books">BOOKS</a></li>
         <li><a href="people">PEOPLE</a></li>
@@ -59,7 +59,7 @@
       </ul>
     </nav>
     <div class="login-area">
-      <a href="/user/login">+  LOGIN  +</a>
+      <a href="/user/login">+ &nbsp; LOGIN &nbsp; +</a>
     </div>
   </footer>
 </div>
