--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -17,7 +17,7 @@ html, body { height: 100%; }
 
 body {
   background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
+  font: 14px Helvetica, Arial, sans-serif;
   font-size: small;
   text-align: center;
 }
@@ -26,120 +26,129 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
 h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
+p { margin: 0; }
 
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
+a         { color: $lightBlue; }
+a:hover   { color: $lightBlue; }
+a:visited { color: $lightBlue; }
 
 .site {
-  color: #615f59;
-  font-size: 115%;
+  color: $darkgray;
   max-width: 950px;
-  margin: 3em auto 2em;
-  line-height: 1.5em;
-}
+  margin: 18px auto 14px;
+  line-height: 1.7em;
 
-a {
-  text-decoration: none;
-}
-
-.header a {
-  font-weight: bold;
-}
-
-.nav-bar li {
-  display: inline-block;
-}
-
-footer {
-  overflow: hidden;
-
-  .icons-nav {
-    border-bottom: 1px solid #817f7a;
-    padding-bottom: 40px;
-
-    li {
-      width: 168px;
-      margin-right: 30px; /* LTR */
-
-      &.last{
-        margin-right: 0;
-      }
-
-      a {
-        display: block;
-        color: #615f59;
-
-        .icon {
-          display: block;
-          background: url(../images/sprites.png) no-repeat;
-          margin: 0 auto;
-        }
-
-        &:hover {
-          span {
-            color: #7dbad7;
-          }
-
-          .icon {
-            &.books {
-              background-position: 0 -50px;
-            }
-
-            &.digital-books {
-              background-position: -50px -50px;
-            }
-
-            &.people {
-              background-position: -100px -50px;
-            }
-
-            &.places {
-              background-position: -150px -50px;
-            }
-          }
-        }
-      }
-    }
-
-    .icon-text {
-      display: inline-block;
-      margin-top: 20px;
-    }
-
-    .books-icon .icon {
-      background-position: 0 0;
-      width: 28px;
-      height: 37px;
-    }
-
-    .digital-books-icon .icon{
-      background-position: -50px 0;
-      width: 28px;
-      height: 36px;
-    }
-
-    .people-icon .icon{
-      background-position: -100px 0;
-      width: 36px;
-      height: 35px;
-    }
-
-    .places-icon .icon{
-      background-position: -150px 0;
-      width: 23px;
-      height: 34px;
-    }
-
-
+  a {
+    text-decoration: none;
   }
 
-  .login-area{
-    padding-top: 7px;
+  header {
 
     a {
-      color: #7dbad7;
+      font-weight: bold;
+    }
+
+    .top-navigation {
+      margin-bottom: 6px;
+
+      a {
+          color: white;
+      }
+    }
+  }
+
+  .nav-bar li {
+    display: inline-block;
+  }
+
+  footer {
+    overflow: hidden;
+
+    .icons-nav {
+      border-bottom: 1px solid #817f7a;
+      padding-bottom: 36px;
+
+      li {
+        width: 168px;
+        margin-right: 30px; /* LTR */
+
+        &.last {
+          margin-right: 0;
+        }
+
+        a {
+          display: block;
+          color: $darkgray;
+
+          .icon {
+            display: block;
+            background: url(../images/sprites.png) no-repeat;
+            margin: 0 auto;
+          }
+
+          &:hover {
+            span {
+              color: $lightBlue;
+            }
+
+            .icon {
+              &.books {
+                background-position: 0 -50px;
+              }
+
+              &.digital-books {
+                background-position: -50px -50px;
+              }
+
+              &.people {
+                background-position: -100px -50px;
+              }
+
+              &.places {
+                background-position: -150px -50px;
+              }
+            }
+          }
+        }
+      }
+
+      .icon-text {
+        display: inline-block;
+        margin-top: 14px;
+      }
+
+      .books-icon .icon {
+        background-position: 0 0;
+        width: 28px;
+        height: 37px;
+      }
+
+      .digital-books-icon .icon {
+        background-position: -50px 0;
+        width: 28px;
+        height: 36px;
+      }
+
+      .people-icon .icon {
+        background-position: -100px 0;
+        width: 36px;
+        height: 35px;
+      }
+
+      .places-icon .icon {
+        background-position: -150px 0;
+        width: 23px;
+        height: 34px;
+      }
+
+    }
+
+    .login-area {
+      padding-top: 7px;
+
+      a {
+        color: $lightBlue;
+      }
     }
   }
 }
