--- a/jekyll/app/_scss/pages/_homepage.scss
+++ b/jekyll/app/_scss/pages/_homepage.scss
@@ -21,7 +21,7 @@
 
     form {
       position: relative;
-      left: -10px;
+      left: -16px;
       max-width: 834px;
       margin: 0 auto;
 
@@ -31,7 +31,7 @@
         vertical-align: top;
       }
 
-      .hp-search-text {
+      .search-text {
         border: 1px solid #615f59;
         border-radius: 24px;
         height: 46px;
@@ -41,9 +41,9 @@
         background-color: transparent;
       }
 
-      .hp-search-submit {
+      .search-submit {
         border: 0px solid #615f59;
-        right: -3px;
+        right: -2px;
         top: 0;
         position: absolute;
         border-radius: 0 24px 24px 0;
@@ -70,7 +70,7 @@
         content: '';
         display: inline-block;
         border-bottom: 1px solid $lightBlue;
-        width: 37%;
+        width: 38%;
         padding-top: 10px;
       }
 
@@ -93,7 +93,7 @@
         background-color: $lightBlue;
         border-radius: 10px;
         padding: 2px 16px;
-        margin-bottom: 5px;
+        margin: 0 2px 5px;
         white-space: nowrap;
         line-height: 1.3;
 
