--- a/jekyll/app/_scss/pages/_homepage.scss
+++ b/jekyll/app/_scss/pages/_homepage.scss
@@ -4,12 +4,19 @@
   .title {
     font-size: 64px;
     line-height: 1;
-    margin-bottom: 45px;
+    margin-bottom: 7px;
 
     a,
     a:hover {
       color: $darkgray;
     }
+  }
+
+  hr {
+    width: 14%;
+    height: 3px;
+    color: $darkgray;
+    margin: 0 auto 36px;
   }
 
   .main-content {
