--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -1,6 +1,29 @@
 @import 'variables.scss';
 @import 'pages/homepage.scss';
 
+@font-face {
+  font-family: 'gillsans_lightregular';
+  src: url('../fonts/gillsans_light-webfont.eot');
+  src: url('../fonts/gillsans_light-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/gillsans_light-webfont.woff') format('woff'),
+  url('../fonts/gillsans_light-webfont.ttf') format('truetype'),
+  url('../fonts/gillsans_light-webfont.svg#gillsans_lightregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'bell_mtbold';
+  src: url('../fonts/bellb-webfont.eot');
+  src: url('../fonts/bellb-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/bellb-webfont.woff2') format('woff2'),
+  url('../fonts/bellb-webfont.woff') format('woff'),
+  url('../fonts/bellb-webfont.ttf') format('truetype'),
+  url('../fonts/bellb-webfont.svg#bell_mtbold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /*****************************************************************************/
 /*
 /* Common
@@ -17,9 +40,9 @@ html, body { height: 100%; }
 
 body {
   background: white url(../images/site_background.jpg) no-repeat center top;
-  background-size: 100%;
+  //background-size: 100%;
   overflow: hidden;
-  font: 14px Helvetica, Arial, sans-serif;
+  font: 14px gillsans_lightregular;
   font-size: small;
   text-align: center;
 }
@@ -37,7 +60,7 @@ a:visited { color: $lightBlue; }
 .site {
   color: $darkgray;
   max-width: 950px;
-  margin: 18px auto 14px;
+  margin: 20px auto 14px;
   line-height: 1.7em;
 
   a {
@@ -48,13 +71,40 @@ a:visited { color: $lightBlue; }
 
     a {
       color: $darkgray;
+
+      &:hover {
+        color: $lightBlue;
+      }
     }
 
     .top-navigation {
-      margin-bottom: 6px;
+      margin-bottom: 25px;
+      font-family: bell_mtbold;
 
       li {
         padding: 0 15px;
+        letter-spacing: 1px;
+
+        &.first {
+          padding-left: 0px;
+        }
+
+        &.last {
+          padding-right: 5px;
+        }
+        
+        &.search {
+          width: 30px;
+          height: 30px;
+          background: url("../images/top_search.png") no-repeat center bottom;
+          padding-left: 0px;
+
+          span a {
+            display: inline-block;
+            width: 100%;
+            height: 22px;
+          }
+        }
       }
 
     }
@@ -68,6 +118,7 @@ a:visited { color: $lightBlue; }
     overflow: hidden;
 
     .icons-nav {
+      font-family: bell_mtbold;
       border-bottom: 1px solid #817f7a;
       padding-bottom: 36px;
 
