--- a/jekyll/app/_includes/header.html
+++ b/jekyll/app/_includes/header.html
@@ -6,5 +6,5 @@
     <li class="search"><span><a href="#"></a></span></li>
   </ul>
 </nav>
-<h1 class="title"><a href="/">HASKALA</a></h1>
+<h1 class="site-name"><a href="/">HASKALA</a></h1>
 <hr>
