Strarting single book page markup

--- a/jekyll/app/_includes/header.html
+++ b/jekyll/app/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="top-navigation nav-bar">
   <ul>
-    <li class="first"><a href="books">BOOKS</a></li>
+    <li class="first active"><a href="books">BOOKS</a></li>
     <li><a href="people">PEOPLE</a></li>
     <li class="last"><a href="places">PLACES</a></li>
     <li class="search"><span><a href="#"></a></span></li>
