continue single book page markup
Conflicts:
	jekyll/app/_includes/header.html
	jekyll/app/_scss/main.scss
	jekyll/app/_scss/pages/_homepage.scss
	jekyll/app/index.html

--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -167,6 +167,7 @@ a:visited { color: $lightBlue; }
 
   footer {
     overflow: hidden;
+    clear: both;
 
     .icons-nav {
       font-family: bell_mtbold;
