--- a/jekyll/app/_scss/pages/_singlebook.scss
+++ b/jekyll/app/_scss/pages/_singlebook.scss
@@ -7,6 +7,7 @@
     hr {
       margin-bottom: 11px;
     }
+
     .bread-crumbs {
 
       li {
@@ -19,14 +20,103 @@
       }
     }
 
-    .field-label {
-      float: left;
+    .hr-title {
+      margin: 13px 0 64px;
+      font-size: 24px;
+
+      &:before, &:after {
+        width: 45%;
+      }
     }
 
-    .details-navigation{
+    .main-content {
+      margin-top: 30px;
+      text-align: left;
 
-      li {
-        display: inline;
+      .top-details {
+
+        padding: 0 20px 57px;
+        border-bottom: 2px solid $darkgray;
+        margin-bottom: 30px;
+
+        .title {
+          font-size: 31px;
+          line-height: 1.06;
+          text-transform: uppercase;
+          margin-bottom: 9px;
+        }
+
+
+      }
+
+      .field{
+        clear: both;
+        line-height: 1.85;
+
+        .field-label {
+          float: left;
+          font-size: 16px;
+
+          &.type-label {
+            font-size: 18px;
+          }
+        }
+      }
+
+      .details-navigation {
+
+        font-family: bell_mtbold;
+        letter-spacing: 0.2px;
+        height: 25px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        padding-bottom: 72px;
+
+        li {
+          display: list-item;
+          list-style-type: disc;
+          margin: 0 12px;
+          float: left;
+          font-size: 14px;
+
+          &.first
+          {
+            list-style-type: none;
+          }
+
+          &.active a {
+            color: $lightBlue;
+          }
+
+          a {
+            color: $darkgray;
+            font-size: 20px;
+          }
+        }
+      }
+
+      .fields-group {
+
+        clear: both;
+        border-top: 1px solid $darkgray;
+        padding: 8px 20px;
+        margin-top: 30px;
+
+        .fields-group-name {
+          font: 24px bell_mtbold;
+          color: $lightBlue;
+          text-transform: uppercase;
+          width: 270px;
+          display: inline-block;
+          vertical-align: top;
+
+        }
+
+        .fields {
+          display: inline-block;
+          width: 60%;
+          margin-top: -5px;
+        }
       }
     }
   }
