--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -28,6 +28,6 @@
     </ul>
   </nav>
   <div class="login-area">
-    <a href="/user/login">+ &nbsp; LOGIN &nbsp; +</a>
+    <a href="/user/login">LOGIN</a>
   </div>
 </footer>
