--- a/jekyll/app/_scss/pages/_homepage.scss
+++ b/jekyll/app/_scss/pages/_homepage.scss
@@ -26,8 +26,8 @@
         height: 46px;
         width: 90%;
         padding: 0 10px 0 15px;
-
-        background-color: transparent;
+        background-color: white;
+        opacity: 0.2;
       }
 
       .search-submit {
