--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -2,14 +2,16 @@
 @import 'pages/homepage.scss';
 
 @font-face {
-  font-family: 'gillsans_lightregular';
-  src: url('../fonts/gillsans_light-webfont.eot');
-  src: url('../fonts/gillsans_light-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/gillsans_light-webfont.woff') format('woff'),
-  url('../fonts/gillsans_light-webfont.ttf') format('truetype'),
-  url('../fonts/gillsans_light-webfont.svg#gillsans_lightregular') format('svg');
+  font-family: 'open_sansregular';
+  src: url('opensans-regular-webfont.eot');
+  src: url('opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('opensans-regular-webfont.woff2') format('woff2'),
+  url('opensans-regular-webfont.woff') format('woff'),
+  url('opensans-regular-webfont.ttf') format('truetype'),
+  url('opensans-regular-webfont.svg#open_sansregular') format('svg');
   font-weight: normal;
   font-style: normal;
+
 }
 
 @font-face {
@@ -42,7 +44,7 @@ body {
   background: white url(../images/site_background.jpg) no-repeat center top;
   //background-size: 100%;
   overflow: hidden;
-  font: 14px gillsans_lightregular;
+  font: 14px open_sansregular;
   font-size: small;
   text-align: center;
 }
