--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -3,12 +3,12 @@
 
 @font-face {
   font-family: 'open_sansregular';
-  src: url('opensans-regular-webfont.eot');
-  src: url('opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
-  url('opensans-regular-webfont.woff2') format('woff2'),
-  url('opensans-regular-webfont.woff') format('woff'),
-  url('opensans-regular-webfont.ttf') format('truetype'),
-  url('opensans-regular-webfont.svg#open_sansregular') format('svg');
+  src: url('../fonts/opensans-regular-webfont.eot');
+  src: url('../fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-regular-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-regular-webfont.woff') format('woff'),
+  url('../fonts/opensans-regular-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
   font-weight: normal;
   font-style: normal;
 
@@ -197,7 +197,7 @@ a:visited { color: $lightBlue; }
 
       .icon-text {
         display: inline-block;
-        margin-top: 13px;
+        margin-top: 14px;
       }
 
       .books-icon .icon {
