--- a/jekyll/app/_scss/pages/_homepage.scss
+++ b/jekyll/app/_scss/pages/_homepage.scss
@@ -2,6 +2,8 @@
   text-align: center;
 
   .main-content {
+    font-weight: bold;
+    letter-spacing: 0.4px;
     margin-bottom: 36px;
   }
 
@@ -18,6 +20,25 @@
         height: 48px;
         display: inline-block;
         vertical-align: top;
+        color: $darkgray;
+        font-weight: bold;
+        letter-spacing: -0.98px;
+      }
+
+      ::-webkit-input-placeholder {
+        color: $darkgray;
+      }
+
+      :-moz-placeholder { /* Firefox 18- */
+        color: $darkgray;
+      }
+
+      ::-moz-placeholder {  /* Firefox 19+ */
+        color: $darkgray;
+      }
+
+      :-ms-input-placeholder {
+        color: $darkgray;
       }
 
       .search-text {
@@ -26,8 +47,8 @@
         height: 46px;
         width: 90%;
         padding: 0 10px 0 15px;
-        background-color: white;
-        opacity: 0.2;
+        background-color: rgba(255,255,255, 0.2);
+
       }
 
       .search-submit {
@@ -48,7 +69,7 @@
   }
 
   .tags-cloud-wrapper {
-    margin-bottom: 70px;
+    margin-bottom: 71px;
 
     h3 {
       color: $lightBlue;
@@ -75,7 +96,7 @@
     }
 
     .tags-cloud {
-      padding-top: 8px;
+      padding-top: 9px;
       max-width: 815px;
       margin: 0 auto;
 
@@ -84,9 +105,11 @@
         background-color: $lightBlue;
         border-radius: 10px;
         padding: 2px 18px;
-        margin: 0 2px 5px;
+        margin: 0 2px 4px;
+        font-size: 11px;
+        font-weight: bold;
         white-space: nowrap;
-        line-height: 1.37;
+        line-height: 1.5;
 
         &:hover {
           background-color: $orange;
