--- a/jekyll/app/_scss/pages/_homepage.scss
+++ b/jekyll/app/_scss/pages/_homepage.scss
@@ -57,7 +57,7 @@
         top: 0;
         position: absolute;
         border-radius: 0 24px 24px 0;
-        background: #615f59 url(/images/search.png) no-repeat center;
+        background: #615f59 url('../images/search.png') no-repeat center;
         width: 58px;
 
 
