continue single book
Conflicts:
	jekyll/app/_scss/pages/_homepage.scss

--- a/jekyll/app/_layouts/homepage.html
+++ b/jekyll/app/_layouts/homepage.html
@@ -21,7 +21,18 @@
 
   {{ content }}
 
-  {% include footer.html %}
+  <footer>
+    {% include footer.html %}
+    <div class="login-area">
+      <nav class="bottom-nav">
+        <ul>
+          <li><a href="/user/login">LOGIN</a></li>
+        </ul>
+      </nav>
+
+    </div>
+  </footer>
+
 
 </div>
 
