--- a/jekyll/app/_layouts/single_book.html
+++ b/jekyll/app/_layouts/single_book.html
@@ -28,7 +28,16 @@
 
   {{ content }}
 
-  {% include footer.html %}
+  <footer>
+    {% include footer.html %}
+    <nav class="bottom-nav">
+      <ul>
+        <li class="first"><a href="#">Add a book</a></li>
+        <li><a href="#">Add a book series</a></li>
+        <li class="last"><a href="#">Add a person</a></li>
+      </ul>
+    </nav>
+  </footer>
 
 </div>
 
