Footer dots color
Conflicts:
	jekyll/app/_scss/pages/_homepage.scss

--- a/jekyll/app/_scss/pages/_singlebook.scss
+++ b/jekyll/app/_scss/pages/_singlebook.scss
@@ -155,6 +155,7 @@
             font-weight: bold;
             vertical-align: bottom;
             padding-left: 23px;
+            color: $lightBlue;
           }
 
           &.last:after {
