--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -1,15 +1,29 @@
 @import 'variables.scss';
 @import 'pages/homepage.scss';
 @import "pages/singlebook.scss";
+@import "pages/books.scss";
 
 @font-face {
   font-family: 'open_sansregular';
-  src: url('opensans-regular-webfont.eot');
-  src: url('opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
-  url('opensans-regular-webfont.woff2') format('woff2'),
-  url('opensans-regular-webfont.woff') format('woff'),
-  url('opensans-regular-webfont.ttf') format('truetype'),
-  url('opensans-regular-webfont.svg#open_sansregular') format('svg');
+  src: url('../fonts/opensans-regular-webfont.eot');
+  src: url('../fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-regular-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-regular-webfont.woff') format('woff'),
+  url('../fonts/opensans-regular-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'gillsans_lightregular';
+  src: url('../fonts/gillsans_light-webfont-webfont.eot');
+  src: url('../fonts/gillsans_light-webfont-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/gillsans_light-webfont-webfont.woff2') format('woff2'),
+  url('../fonts/gillsans_light-webfont-webfont.woff') format('woff'),
+  url('../fonts/gillsans_light-webfont-webfont.ttf') format('truetype'),
+  url('../fonts/gillsans_light-webfont-webfont.svg#gillsans_lightregular') format('svg');
   font-weight: normal;
   font-style: normal;
 
