--- a/jekyll/app/_layouts/single_book.html
+++ b/jekyll/app/_layouts/single_book.html
@@ -12,7 +12,7 @@
   <!-- endbuild -->
 
 </head>
-<body class="page-single-book">
+<body class="page-single-book not-front">
 
 <div class="site">
   <header>
