--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -17,13 +17,13 @@
 }
 
 @font-face {
-  font-family: 'gillsans_lightregular';
-  src: url('../fonts/gillsans_light-webfont-webfont.eot');
-  src: url('../fonts/gillsans_light-webfont-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/gillsans_light-webfont-webfont.woff2') format('woff2'),
-  url('../fonts/gillsans_light-webfont-webfont.woff') format('woff'),
-  url('../fonts/gillsans_light-webfont-webfont.ttf') format('truetype'),
-  url('../fonts/gillsans_light-webfont-webfont.svg#gillsans_lightregular') format('svg');
+  font-family: 'open_sanslight';
+  src: url('../fonts/opensans-light-webfont.eot');
+  src: url('../fonts/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/opensans-light-webfont.woff2') format('woff2'),
+  url('../fonts/opensans-light-webfont.woff') format('woff'),
+  url('../fonts/opensans-light-webfont.ttf') format('truetype'),
+  url('../fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
   font-weight: normal;
   font-style: normal;
 
@@ -39,6 +39,18 @@
   url('../fonts/bellb-webfont.svg#bell_mtbold') format('svg');
   font-weight: normal;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'Alef';
+  src: url('../fonts/Alef-Bold.eot');
+  src: url('../fonts/Alef-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Alef-Bold.woff') format('woff'),
+  url('../fonts/Alef-Bold.ttf') format('truetype'),
+  url('../fonts/Alef-Bold.svg#alefbold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+
 }
 
 /*****************************************************************************/
