--- a/jekyll/app/_includes/header.html
+++ b/jekyll/app/_includes/header.html
@@ -6,6 +6,5 @@
     <li class="search"><a href="#"></a></li>
   </ul>
 </nav>
-<!--<h1 class="site-name"><a href="/">Library of the Haskala</a></h1>-->
-<h1 class="site-name"><a href="/">Haskala</a></h1>
+<h1 class="site-name"><a href="/"><span>Library of the</span> Haskala</a></h1>
 <hr>
