--- a/jekyll/app/_scss/_homepage.scss
+++ b/jekyll/app/_scss/_homepage.scss
@@ -41,24 +41,24 @@
       }
 
       .search-text {
-        border: 1px solid #615f59;
+        border: 1px solid #a5a29b;
         border-radius: 24px;
         height: 46px;
         width: 100%;
         padding: 0 10px 0 15px;
-        background-color: rgba(255,255,255, 0.2);
-
+        background-color: rgba(255, 255, 255, 0.4);
+        font-size: 13px;
+        letter-spacing: -0.6px;
       }
 
-      .search-submit {
-        border: 0px solid #615f59;
-        right: -2px;
+      .submit {
+        border: none;
+        right: 1px;
         top: 0;
         position: absolute;
         border-radius: 0 24px 24px 0;
-        background: #615f59 url('../images/search.png') no-repeat center;
-        width: 58px;
-
+        background: #615f59 url('../images/search.png') no-repeat 14px 11px;
+        width: 60px;
 
         &:hover {
           background-color: $orange;
@@ -68,13 +68,13 @@
   }
 
   .tags-cloud-wrapper {
-    margin-bottom: 71px;
+    margin-top: 44px;
+    margin-bottom: 77px;
 
     h3 {
       color: $lightBlue;
       font-family: bell_mtbold;
       font-weight: bold;
-      letter-spacing: 1px;
 
       &:before,
       &:after {
@@ -95,28 +95,25 @@
     }
 
     .tags-cloud {
-      padding-top: 9px;
+      padding-top: 5px;
       max-width: 815px;
       margin: 0 auto;
 
-      li {
+      a {
         display: inline-block;
         background-color: $lightBlue;
-        border-radius: 10px;
-        padding: 2px 18px;
-        margin: 0 2px 4px;
+        border-radius: 10.5px;
+        padding: 0 18px;
+        margin: 4px 8px 0 0;
+        height: 21px;
+        line-height: 19px;
+        color: white;
         font-size: 11px;
-        font-weight: bold;
         white-space: nowrap;
-        line-height: 1.5;
 
         &:hover {
           background-color: $orange;
         }
-      }
-
-      a {
-        color: white;
       }
     }
   }
